--- a/src/features/cart/cartComp/cartListItem.scss
+++ b/src/features/cart/cartComp/cartListItem.scss
@@ -73,6 +73,11 @@
           background: themed("iconBg");
           font-size: 22px;
         }
+        .remove-icon {
+          color: #b8b8b8;
+          font-size: 28px;
+        }
+
 
         span {
           font-family: "Cairo";
