--- a/src/features/products/modalProduct/modalProduct.scss
+++ b/src/features/products/modalProduct/modalProduct.scss
@@ -1,158 +1,159 @@
 @import "../../../style.scss";
 
 .ModalProduct {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
+  @include themify($themes) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
 
+    .card {
+      display: flex;
+      flex-direction: column;
+      background: themed("bg");
+      width: 357px;
+      height: 193px;
 
-  .card {
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-    width: 357px;
-    height: 193px;
-
-    .single-product {
-      width: 100%;
-      height: 100%;
-
-      hr {
-        margin: 0 auto;
-        width: 314px;
-        border: 2px solid #2c7be5;
-      }
-
-      .ModalProduct-part-1 {
+      .single-product {
         width: 100%;
-        height: 50%;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-end;
-        justify-content: flex-end;
-        padding-top: 10px;
-        padding-right: 22px;
-        margin-bottom: 10px;
-        gap: 15px;
+        height: 100%;
 
-        .product-title {
-          color: var(--color-mainBlue);
-          text-align: right;
-          font-family: "Cairo";
-          font-style: normal;
-          h4 {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 30px;
-          }
-          span {
-            font-weight: 500;
-            font-size: 22px;
-            line-height: 41px;
-          }
+        hr {
+          margin: 0 auto;
+          width: 314px;
+          border: 2px solid themed("textColor");
         }
 
-        .img-container {
-          width: 79px;
-          height: 66px;
-          //   border-radius: 10px;
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            overflow: hidden;
-            border-radius: 10px;
-          }
-        }
-
-        .quantity-icons {
+        .ModalProduct-part-1 {
+          width: 100%;
+          height: 50%;
           display: flex;
-          flex-direction: column;
-          align-items: center;
-          max-width: 38px;
+          flex-direction: row;
+          align-items: flex-end;
+          justify-content: flex-end;
+          padding-top: 10px;
+          padding-right: 22px;
+          margin-bottom: 10px;
+          gap: 15px;
 
-          .add-icon {
-            color: var(--color-mainBlue);
-            border-radius: 50%;
-            background: rgba(44, 123, 229, 0.3);
-            font-size: 25px;
-          }
-          .remove-icon {
-            color: #b8b8b8;
-            font-size: 28px;
-          }
-
-          span {
+          .product-title {
+            color: themed("textColor");
+            text-align: right;
             font-family: "Cairo";
             font-style: normal;
-            font-weight: 500;
-            font-size: 15px;
-            padding: auto;
-            color: var(--color-mainBlue);
-          }
-        }
-      }
-
-      .ModalProduct-part-2 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        // margin-top: 10px;
-        .total-price {
-          font-family: "Cairo";
-          font-style: normal;
-          font-weight: 500;
-          color: var(--color-mainBlue);
-          p {
-            font-size: 14px;
-            line-height: 26px;
+            h4 {
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 30px;
+            }
             span {
-              font-size: 18px;
-              line-height: 34px;
-              color: var(--color-orange);
+              font-weight: 500;
+              font-size: 22px;
+              line-height: 41px;
             }
           }
-        }
 
-        .confirmation {
-          display: flex;
-          align-items: center;
-          gap: 25px;
-          margin-top: 8px;
+          .img-container {
+            width: 79px;
+            height: 66px;
+            //   border-radius: 10px;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              overflow: hidden;
+              border-radius: 10px;
+            }
+          }
 
-          button {
+          .quantity-icons {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
-            gap: 5px;
-            width: 100px;
-            height: 38px;
-            border-radius: 10px;
-            border: none;
+            max-width: 38px;
+
+            .add-icon {
+              color: themed("blueWhite");
+              border-radius: 50%;
+              background: themed("iconBg");
+              font-size: 25px;
+            }
+            .remove-icon {
+              color: #b8b8b8;
+              font-size: 28px;
+              border-radius: 50%;
+            }
+
             span {
               font-family: "Cairo";
               font-style: normal;
               font-weight: 500;
+              font-size: 15px;
+              padding: auto;
+              color: themed("textColor");
+            }
+          }
+        }
+
+        .ModalProduct-part-2 {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          // margin-top: 10px;
+          .total-price {
+            font-family: "Cairo";
+            font-style: normal;
+            font-weight: 500;
+            color: themed("textColor");
+            p {
               font-size: 14px;
-              color: var(--color-white);
+              line-height: 26px;
+              span {
+                font-size: 18px;
+                line-height: 34px;
+                color: themed("orangeBlueIcons");
+              }
             }
           }
 
-          .cancel-btn {
-            background: var(--color-orange);
-          }
-          .check-btn {
-            background: var(--color-mainBlue);
+          .confirmation {
+            display: flex;
+            align-items: center;
+            gap: 25px;
+            margin-top: 8px;
+
+            button {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 5px;
+              width: 100px;
+              height: 38px;
+              border-radius: 10px;
+              border: none;
+              span {
+                font-family: "Cairo";
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                color: #ffffff;
+              }
+            }
+
+            .cancel-btn {
+              background: themed("orangeBlueIcons");
+            }
+            .check-btn {
+              background: themed("mainIconColor");
+            }
           }
         }
       }
     }
   }
 }
-
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
 @media screen and (min-width: 600px) {
   .ModalProduct {
