--- a/src/pages/splashScreen/splash.style.scss
+++ b/src/pages/splashScreen/splash.style.scss
@@ -1,28 +1,30 @@
 @import "../../style.scss";
 
 .splash-container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #edf2f9;
-  img {
-    object-fit: contain;
-    width: 50%;
-    height: 50%;
-  }
+  @include themify($themes) {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: themed("bg");
+    img {
+      object-fit: contain;
+      width: 50%;
+      height: 50%;
+    }
 
-  .footer-title {
-    position: absolute;
-    bottom: 78px;
-    color: var(--color-orange);
-    font-family: "Cairo";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 45px;
-    text-align: center;
+    .footer-title {
+      position: absolute;
+      bottom: 78px;
+      color: themed("orangeBlueIcons");
+      font-family: "Cairo";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 45px;
+      text-align: center;
+    }
   }
 }
