--- a/src/pages/profilePage/profilePage.scss
+++ b/src/pages/profilePage/profilePage.scss
@@ -39,9 +39,18 @@
         justify-content: flex-end;
         // gap: 10px;
         // margin-right: 22px;
-        padding: 5px 0px;
+        margin: 10px 0px;
+        .label {
+          margin-right: 10px;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 30px;
+          color: themed("textColor");
+        }
+
         .css-j204z7-MuiFormControlLabel-root {
           margin-right: 10px;
+          height: 20px;
         }
         .css-j204z7-MuiFormControlLabel-root .MuiFormControlLabel-label {
           font-family: "Cairo";
