--- a/src/pages/settingsPage/settingsPage.scss
+++ b/src/pages/settingsPage/settingsPage.scss
@@ -1,15 +1,15 @@
-@import "../../../style.scss";
+@import "../../style.scss";
 
-.registerPage {
+.settingsPage {
   @include themify($themes) {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    width: 100%;
+    margin: 10px auto;
+    gap: 37px;
     background: themed("bg");
-
-    //   gap: 20px;
 
     .logo-container {
       padding-top: auto;
@@ -22,17 +22,39 @@
       .img-container {
         width: 175px;
         height: 175px;
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
         background: rgba(44, 123, 229, 0.3);
-        span {
-          padding-top: 10px;
-          font-size: 15px;
-          font-weight: 200;
-          color: themed("textColor");
+        border: 3px solid #2c7be5;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        .edit-btn {
+          position: absolute;
+          bottom: 10px;
+          right: 0px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 46px !important;
+          height: 46px !important;
+          background: #ffffff;
+          border: 3px solid #2c7be5;
+          border-radius: 50%;
+          .icon {
+            font-weight: 700;
+            font-size: 25px;
+            color: #2c7be5;
+          }
         }
       }
 
@@ -50,29 +72,38 @@
       display: flex;
       flex-direction: column;
       direction: rtl;
-      gap: 10px;
-
+      width: 85%;
       .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
         color: themed("blackGray");
+        font-family: "Cairo";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        height: 40px;
+        padding: 13px 14px;
         &::placeholder {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 16px;
           color: themed("textColor");
         }
       }
 
       .input fieldset {
+        // height: 40px;
         font-family: "Cairo";
         margin: 10px 0px;
         border: 1px solid themed("border");
         border-radius: 10px;
         color: themed("textColor") !important;
       }
-
     }
 
     .btn {
       // margin-top: 20px;
-      width: 130px;
-      height: 46px;
+      width: 132px;
+      height: 44px;
       border-radius: 12px;
       background: themed("orangeBlueIcons");
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -86,43 +117,5 @@
         color: #ffffff;
       }
     }
-
-    .footer-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-end;
-      // padding-top: 30px;
-
-      .footer-title {
-        .link {
-          text-align: center;
-          text-decoration: none;
-          width: 100%;
-
-          span {
-            font-weight: 600;
-            color: themed("orangeBlueIcons");
-          }
-        }
-      }
-
-      span {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 34px;
-        text-align: center;
-        color: themed("textColor");
-      }
-    }
-  }
-}
-
-/* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
-@media screen and (min-width: 600px) {
-  .registerPage {
-    padding: 100px 0px;
   }
 }
